chore: convert dtos to record